--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "type": "git",
         "url":  "https://github.com/gemstonejs/gemstone-tool-frontend.git"
     },
-    "bugs":     "https://github.com/gemstonejs/gemstone-tool-frontend/issues",
+    "bugs": {
+        "url":  "http://github.com/gemstonejs/gemstone-tool-frontend/issues"
+    },
     "devDependencies": {
         "eslint":                           "~3.19.0",
         "eslint-config-standard":           "~10.0.0",
