--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "table":                          "~4.0.1",
         "progress":                       "~2.0.0",
         "chokidar":                       "~1.6.1",
+        "glob":                           "~7.1.1",
         "glob-promise":                   "~3.1.0",
         "beepbeep":                       "~1.2.1",
         "webpack":                        "~2.3.3",
