--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "glob":                             "~7.1.1",
         "glob-promise":                     "~3.1.0",
         "beepbeep":                         "~1.2.1",
+        "node-notifier":                    "~5.1.2",
         "webpack":                          "~2.3.3",
         "gemstone-config":                  "~0.9.1",
         "gemstone-linter-js":               "~0.9.0",
