--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
         "beepbeep":                         "~1.2.1",
         "node-notifier":                    "~5.1.2",
         "webpack":                          "~2.3.3",
-        "gemstone-config":                  "~0.9.1",
+        "gemstone-config":                  "~0.9.2",
         "gemstone-linter-js":               "~0.9.0",
+        "gemstone-linter-ts":               "~0.9.1",
         "gemstone-linter-html":             "~0.9.0",
         "gemstone-linter-css":              "~0.9.0",
         "gemstone-linter-yaml":             "~0.9.0",
         "gemstone-linter-json":             "~0.9.0",
-        "gemstone-config-webpack":          "~0.9.0"
+        "gemstone-config-webpack":          "~0.9.1"
     },
     "peerDependencies": {
-        "gemstone-tool":                    "~0.9.0"
+        "gemstone-tool":                    "~0.9.3"
     },
     "scripts": {
         "prepublish": "eslint --config eslint.yaml gemstone-tool-frontend.js"
