--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "gemstone-tool":                    "~0.9.20"
     },
     "scripts": {
-        "prepublish": "eslint --config eslint.yaml gemstone-tool-frontend.js"
+        "prepublishOnly": "eslint --config eslint.yaml gemstone-tool-frontend.js"
     },
     "main": "gemstone-tool-frontend.js"
 }
