--- a/package.json
+++ b/package.json
@@ -20,37 +20,37 @@
         "url":  "http://github.com/gemstonejs/gemstone-tool-frontend/issues"
     },
     "devDependencies": {
-        "eslint":                           "~4.19.1",
-        "eslint-config-standard":           "~11.0.0",
-        "eslint-plugin-standard":           "~3.0.1",
-        "eslint-plugin-promise":            "~3.7.0",
-        "eslint-plugin-import":             "~2.10.0",
-        "eslint-plugin-node":               "~6.0.1",
-        "babel-eslint":                     "~8.2.2"
+        "eslint":                           "4.19.1",
+        "eslint-config-standard":           "11.0.0",
+        "eslint-plugin-standard":           "3.0.1",
+        "eslint-plugin-promise":            "3.7.0",
+        "eslint-plugin-import":             "2.10.0",
+        "eslint-plugin-node":               "6.0.1",
+        "babel-eslint":                     "8.2.2"
     },
     "dependencies": {
-        "mz":                               "~2.7.0",
-        "chalk":                            "~2.3.2",
-        "babel-code-frame":                 "~6.26.0",
-        "table":                            "~4.0.3",
-        "progress":                         "~2.0.0",
-        "chokidar":                         "~2.0.3",
-        "glob":                             "~7.1.2",
-        "glob-promise":                     "~3.4.0",
-        "beepbeep":                         "~1.2.2",
-        "node-notifier":                    "~5.2.1",
-        "webpack":                          "~3.11.0",
-        "gemstone-config":                  "~0.9.32",
-        "gemstone-linter-js":               "~0.9.21",
-        "gemstone-linter-ts":               "~0.9.26",
-        "gemstone-linter-html":             "~0.9.22",
-        "gemstone-linter-css":              "~0.9.27",
-        "gemstone-linter-yaml":             "~0.9.20",
-        "gemstone-linter-json":             "~0.9.19",
-        "gemstone-config-webpack":          "~0.9.59"
+        "mz":                               "2.7.0",
+        "chalk":                            "2.3.2",
+        "babel-code-frame":                 "6.26.0",
+        "table":                            "4.0.3",
+        "progress":                         "2.0.0",
+        "chokidar":                         "2.0.3",
+        "glob":                             "7.1.2",
+        "glob-promise":                     "3.4.0",
+        "beepbeep":                         "1.2.2",
+        "node-notifier":                    "5.2.1",
+        "webpack":                          "3.11.0",
+        "gemstone-config":                  "0.9.32",
+        "gemstone-linter-js":               "0.9.21",
+        "gemstone-linter-ts":               "0.9.26",
+        "gemstone-linter-html":             "0.9.22",
+        "gemstone-linter-css":              "0.9.27",
+        "gemstone-linter-yaml":             "0.9.20",
+        "gemstone-linter-json":             "0.9.19",
+        "gemstone-config-webpack":          "0.9.59"
     },
     "peerDependencies": {
-        "gemstone-tool":                    "~0.9.32"
+        "gemstone-tool":                    "0.9.32"
     },
     "scripts": {
         "prepublishOnly": "eslint --config eslint.yaml gemstone-tool-frontend.js"
