--- a/package.json
+++ b/package.json
@@ -20,38 +20,38 @@
         "url":  "http://github.com/gemstonejs/gemstone-tool-frontend/issues"
     },
     "devDependencies": {
-        "eslint":                           "4.19.1",
-        "eslint-config-standard":           "11.0.0",
-        "eslint-plugin-standard":           "3.1.0",
-        "eslint-plugin-promise":            "3.8.0",
-        "eslint-plugin-import":             "2.13.0",
-        "eslint-plugin-node":               "7.0.1",
-        "babel-eslint":                     "8.2.6"
+        "eslint":                           "5.11.0",
+        "eslint-config-standard":           "12.0.0",
+        "eslint-plugin-standard":           "4.0.0",
+        "eslint-plugin-promise":            "4.0.1",
+        "eslint-plugin-import":             "2.14.0",
+        "eslint-plugin-node":               "8.0.0",
+        "babel-eslint":                     "10.0.1"
     },
     "dependencies": {
         "mz":                               "2.7.0",
         "chalk":                            "2.4.1",
-        "babel-code-frame":                 "6.26.0",
-        "table":                            "4.0.3",
-        "progress":                         "2.0.0",
+        "@babel/code-frame":                "7.0.0",
+        "table":                            "5.1.1",
+        "progress":                         "2.0.3",
         "chokidar":                         "2.0.4",
-        "glob":                             "7.1.2",
+        "glob":                             "7.1.3",
         "glob-promise":                     "3.4.0",
         "beepbeep":                         "1.2.2",
-        "node-notifier":                    "5.2.1",
-        "webpack-cli":                      "3.1.0",
-        "webpack":                          "4.16.5",
-        "gemstone-config":                  "0.9.41",
-        "gemstone-linter-js":               "0.9.28",
+        "node-notifier":                    "5.3.0",
+        "webpack-cli":                      "3.1.2",
+        "webpack":                          "4.28.2",
+        "gemstone-config":                  "0.9.42",
+        "gemstone-linter-js":               "0.9.29",
         "gemstone-linter-ts":               "0.9.35",
-        "gemstone-linter-html":             "0.9.29",
-        "gemstone-linter-css":              "0.9.34",
+        "gemstone-linter-html":             "0.9.30",
+        "gemstone-linter-css":              "0.9.36",
         "gemstone-linter-yaml":             "0.9.28",
         "gemstone-linter-json":             "0.9.26",
-        "gemstone-config-webpack":          "0.9.82"
+        "gemstone-config-webpack":          "0.9.83"
     },
     "peerDependencies": {
-        "gemstone-tool":                    "0.9.43"
+        "gemstone-tool":                    "0.9.44"
     },
     "scripts": {
         "prepublishOnly": "eslint --config eslint.yaml gemstone-tool-frontend.js"
