--- a/eslint.yaml
+++ b/eslint.yaml
@@ -35,4 +35,6 @@ rules:
     object-property-newline:             off
     curly:                               off
     space-in-parens:                     off
+    array-bracket-spacing:               off
+    object-curly-newline:                off
 
